# MazeGenerator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run_tests.sh
include/: difficultysettings.h  mainwindow.h  mazegenerator.h  mazewidget.h  pathfinder.h
include/maze/: difficultysettings.h  mainwindow.h  mazegenerator.h  mazewidget.h  pathfinder.h
src/: main.cpp  mainwindow.cpp  mazegenerator.cpp  mazewidget.cpp  pathfinder.cpp
tests/: CMakeLists.txt  test_difficultysettings.cpp  test_mainwindow.cpp  test_mazegenerator.cpp  test_mazewidget.cpp  test_pathfinder.cpp
tests/scenarios/: scenario_difficulty_switch.cpp  scenario_full_generation.cpp  scenario_large_maze.cpp  scenario_path_search.cpp
